# parmetis4py

./: README.md  pyproject.toml  setup.py
