[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "parmetis4py"
version = "0.0.1"
description = "Python bindings for ParMETIS"
authors = [
    { name="Your Name", email="you@example.com" }
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = []

[tool.setuptools.packages.find]
where = ["src"]  # adjust if your Python code is in a different folder
